--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,8 @@
 
 <!-- Mundarijangiz -->
 <div class="content">
-    <h1>Welcome!</h1>
-    <p>Bali 376 staffs are here</p>
+    <h1>환영합니다!</h1>
+    <p>Bali 376 직원들이 여기 있습니다.</p>
 </div>
+
 {% endblock %}
