--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,6 @@
 <!-- Yagona JavaScript fayli -->
 <script src="{% static 'script.js' %}"></script>
 
-{% block extra_js %}{% endblock %}
+{#{% block extra_js %}{% endblock %}#}
 </body>
 </html>
