--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
 {% block title %}Home page{% endblock %}
 
 {% block content %}
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
 <!-- Fullscreen fon videosi -->
 <div class="fullscreen-bg">
     <video autoplay muted loop playsinline>
