--- a/templates/day_detail.html
+++ b/templates/day_detail.html
@@ -3,24 +3,11 @@
 {% block title %}{{ date }} 날짜{% endblock %}
 
 {% block content %}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <h2>{{ date }} 날짜 세부 정보</h2>
     <a href="/add_worktime/" class="btn-link-button">추가</a>
 
-    <style>
-        .btn-link-button {
-            display: inline-block;
-            padding: 8px 16px;
-            background-color: #007bff;
-            color: white;
-            text-decoration: none;
-            border-radius: 6px;
-            font-size: 14px;
-        }
 
-        .btn-link-button:hover {
-            background-color: #0056b3;
-        }
-    </style>
     {% if details %}
         <table border="1" cellpadding="8" cellspacing="0">
             <thead>
@@ -29,6 +16,8 @@
                 <th>이름</th>
                 <th>시작 시간</th>
                 <th>종료 시간</th>
+                <th>쉬는 시간</th>
+                <th>지속 시간 (시간)</th>
             </tr>
             </thead>
             <tbody>
@@ -38,6 +27,8 @@
                     <td>{{ wt.staff }}</td>
                     <td>{{ wt.start_time }}</td>
                     <td>{{ wt.end_time }}</td>
+                    <td>{{ wt.break_time }}</td>
+                    <td>{{ wt.total_hours }}</td>
                 </tr>
             {% endfor %}
             </tbody>
