--- a/templates/login.html
+++ b/templates/login.html
@@ -2,28 +2,27 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>로그인</title>
-
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
+    <!-- Video background -->
+    <video autoplay muted loop class="video-background">
+        <source src="{% static 'videos/bali.mp4' %}" type="video/mp4">
+        <source src="{% static 'videos/bali.webm' %}" type="video/webm"> <!-- Ixtiyoriy -->
+        Brauzeringiz video tegini qo‘llab-quvvatlamaydi.
+    </video>
 
-<!-- Video background -->
-<video autoplay muted loop class="video-background">
-    <source src="{% static 'videos/bali.mp4' %}" type="video/mp4">
-    Your browser does not support the video tag.
-</video>
-
-<!-- Login form -->
-<div class="login-container">
-    <h2>로그인</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">로그인</button>
-    </form>
-</div>
-
+    <!-- Login form -->
+    <div class="login-container">
+        <h2>로그인</h2>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">로그인</button>
+        </form>
+    </div>
 </body>
 </html>
